@@ -43,5 +43,5 @@ rm -rf %{buildroot}
 %attr(644,root,root) /usr/share/man/man[58]/*
 
 %changelog
-* Sun Dec 4 2005 Brendan O'Dea <bod@optus.net> 2.1.13-1
+* Tue Dec 6 2005 Brendan O'Dea <bod@optus.net> 2.1.13-1
 - 2.1.13 release, see /usr/share/doc/l2tpns-2.1.13/Changes
