@@ -1,8 +1,9 @@
-* Sun Dec 4 2005 Brendan O'Dea <bod@optus.net> 2.1.13
+* Tue Dec 6 2005 Brendan O'Dea <bod@optus.net> 2.1.13
 - Add test/ping-sweep.
 - Apply spec changes from Charlie Brady: use License header, change
   BuildRoot to include username.
 - Fix IPCP negotiation of secondary DNS server, reported by Jon Morby.
+- Clean up sessiont, removing some unused fields.
 
 * Thu Nov 17 2005 Brendan O'Dea <bod@optus.net> 2.1.12
 - Set MTU on tunnel interface so the kernel will re-fragment large
